# cub3d

./: .gitignore  CMakeLists.txt  Makefile  README.md  cub3d  test.sh
inc/: cub3d.h  cub3d_defines.h  cub3d_structs.h  get_next_line.h  my_colours.h
maps/: map.cub  map0.cub  map_b.cub  map_d.cub  test.cub  test0.cub  test1.cub
maps/bad_maps/: no_fc_no_map.cub
src/: hooks.c  init.c  main.c  minimap.c  pars_fc.c  pars_map.c  parser.c  start.c
src/doors/: door_open.c
src/gnl/: get_next_line.c  get_next_line_utils.c
src/hooks/: key_hooks.c  key_wasd.c  mouse_hooks.c
src/parsing/: check.c  pars_fc.c  pars_map.c  pars_nswe.c  pars_walls.c  parser.c  player.c
src/raycasting/: dda_calculations.c  draw_textures.c  raycasting.c
src/sprites/: sprites.c
test/: bad_color.cub  bad_key_fc.cub  bad_key_text.cub  bad_map.cub  bad_path_xpm.cub  bad_symbol_m.cub  four_SO.cub  no_down_w.cub  no_down_w1.cub  no_fc.cub  no_left_w.cub  no_map.cub  no_pl_pos.cub  no_right_w.cub  no_text.cub  no_top_w.cub  no_top_w1.cub  one_s_m.cub  test.sh  three_fc.cub  three_text.cub  two_NO.cub  two_f.cub  two_pl_pos.cub
xpm/: cl_door.xpm  door.xpm  ea.xpm  logo_cub.xpm  no.xpm  so.xpm  test_no.xpm  test_so.xpm  wall.xpm  we.xpm
